--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "bases",
-  "version": "0.0.0",
+  "name": "package.json",
+  "version": "1.0.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -34,5 +34,9 @@
     "karma-jasmine": "~5.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
     "typescript": "~4.7.2"
-  }
+  },
+  "description": "This project was generated with [Angular CLI](https://github.com/angular/angular-cli) version 14.0.2.",
+  "main": "karma.conf.js",
+  "author": "brm",
+  "license": "ISC"
 }
